src/test/deca/context/valid/Objet/protected_to_public.deca
// Description:
//    test du changement d'un champ de protégé vers public
//
// Resultats:
//   
//
// Historique:
//    cree le 19/01/2022

class A {
    protected int i ;
    
}
class B extends A {
    int i ;
}
{}



