src/test/deca/context/invalid/Objet/assign_Extended.deca
// Description:
//    test d'affectation incompatible entre une classe et sa fille
//
// Resultats:
//   20:8: Non compatible assignment of expression
//
// Historique:
//    cree le 20/01/2022

class A {
    int i ;
    
}
class B extends A {
    
}
{
    A a ; 
    B b ;
    b = a ;
}



